--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.6.4"
+    "@astrojs/solid-js": "^2.2.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@supabase/supabase-js": "^2.25.0",
+    "astro": "^2.6.4",
+    "solid-js": "^1.4.3",
+    "tailwindcss": "^3.0.24"
   }
 }
