--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "astro": "^2.6.4",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@astrojs/language-server": "^2.0.17",
+    "typescript": "^5.1.3"
   }
 }
