--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "@astrojs/tailwind": "^3.1.3",
     "@supabase/supabase-js": "^2.25.0",
     "astro": "^2.6.4",
+    "edgedb": "^1.3.3",
     "solid-js": "^1.4.3",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@astrojs/language-server": "^2.0.17",
+    "@edgedb/generate": "^0.3.1",
+    "@tsconfig/node20": "^1.0.2",
+    "@types/node": "^20.4.2",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   }
 }
