ignore edgedb stuff

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ dist/
 # generated types
 .astro/
 
+# edgedb generated interfaces
+dbschema/interfaces.ts
+# edgedb generated queries
+queries/*.query.ts
+# edgedb generated query builder
+dbschema/edgeql-js
+
 # dependencies
 node_modules/
 
